RESOLVED FIXED283212
[macOS] Mitigate sync IPC hangs underneath -[WKWebView shouldDelayWindowOrderingForEvent:]
https://bugs.webkit.org/show_bug.cgi?id=283212
Summary [macOS] Mitigate sync IPC hangs underneath -[WKWebView shouldDelayWindowOrder...
Wenson Hsieh
Reported 2024-11-15 16:21:48 PST
Attachments
Wenson Hsieh
Comment 1 2024-11-15 16:42:36 PST
EWS
Comment 2 2024-11-18 12:50:30 PST
Committed 286746@main (aa1f6fdb951f): <https://commits.webkit.org/286746@main> Reviewed commits have been landed. Closing PR #36733 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.